--- a/Server/platformio.ini
+++ b/Server/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
- ;lib_deps = 	
-; 	esphome/AsyncTCP-esphome@^2.1.4
-; 	esphome/ESPAsyncWebServer-esphome@^3.3.0
+lib_deps = 	
+ 	esphome/AsyncTCP-esphome@^2.1.4
+ 	esphome/ESPAsyncWebServer-esphome@^3.3.0
