--- a/sensor/platformio.ini
+++ b/sensor/platformio.ini
@@ -8,11 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32-c3-devkitc-02]
 platform = espressif32
-board = esp32dev
+board = esp32-c3-devkitc-02
 framework = arduino
-monitor_speed = 115200
-lib_deps = 
-	esphome/AsyncTCP-esphome@^2.1.4
-	esphome/ESPAsyncWebServer-esphome@^3.3.0
