--- a/Server/platformio.ini
+++ b/Server/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	esphome/AsyncTCP-esphome@^2.1.4
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
