--- a/Server/platformio.ini
+++ b/Server/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-; lib_deps = 
-; 	esphome/AsyncTCP-esphome@^2.1.4
-; 	esphome/ESPAsyncWebServer-esphome@^3.3.0
-; 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	esphome/AsyncTCP-esphome@^2.1.4
+	esphome/ESPAsyncWebServer-esphome@^3.3.0
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
