--- a/clientRadio/platformio.ini
+++ b/clientRadio/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
+serial = 115200
 lib_deps = 
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
-	mikem/VirtualWire@^1.27
+	lowpowerlab/RFM69@^1.5.2
+	adafruit/Adafruit AHTX0@^2.0.5
