--- a/xiaomi_ble_client/platformio.ini
+++ b/xiaomi_ble_client/platformio.ini
@@ -8,10 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+[env:esp32-c3-devkitm-1]
 platform = espressif32
-board = esp32-c3-devkitc-02
+board = esp32-c3-devkitm-1
 framework = arduino
-lib_deps = 
-	fmalpartida/LiquidCrystal@^1.5.0
-	bblanchon/ArduinoJson@^7.3.0
+monitor_speed = 115200
+lib_deps = adafruit/Adafruit AHTX0@^2.0.5
