--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	esphome/ESPAsyncWebServer-esphome@^3.3.0
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
