--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = spiffs
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
