--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -17,3 +17,5 @@ board_build.filesystem = spiffs
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	bblanchon/ArduinoJson@^7.3.1
+	knolleary/PubSubClient@^2.8
