--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -8,12 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+[env:esp32dev]
 platform = espressif32
-board = esp32-c3-devkitc-02
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = spiffs
+board_build.partitions = partitions_16mb.csv
+build_flags = 
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
