--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -15,6 +15,11 @@ framework = arduino
 monitor_speed = 115200
 board_build.filesystem = spiffs
 board_build.partitions = partitions_16mb.csv
+; upload_protocol = espota
+; upload_port = ESP32-Thermostat.local  # или IP-адрес устройства
+; upload_flags =
+;     --port=3232
+;     --auth=admin123  ; должен совпадать с OTA_PASSWORD в коде
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
