--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -8,20 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32-s3-devkitc-1-n16r8v]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
+; board_build.flash_mode = qio
+; board_upload.flash_size = 16MB
+; board_build.arduino.partitions = default_16MB.csv
+; board_build.psram_size = 8MB
 monitor_speed = 115200
-board_build.filesystem = spiffs
-board_build.partitions = partitions_16mb.csv
+; board_build.filesystem = spiffs
+;board_build.partitions = partitions_16mb.csv
 ; upload_protocol = espota
 ; upload_port = ESP32-Thermostat.local  # или IP-адрес устройства
 ; upload_flags =
 ;     --port=3232
 ;     --auth=admin123  ; должен совпадать с OTA_PASSWORD в коде
 build_flags = 
-	-DBOARD_HAS_PSRAM
+	; -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
