--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -27,6 +27,7 @@ monitor_speed = 115200
 build_flags = 
 	; -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
+	-DCORE_DEBUG_LEVEL=5  
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	bblanchon/ArduinoJson@^7.3.1
