--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -12,24 +12,16 @@
 platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
-; board_build.flash_mode = qio
-; board_upload.flash_size = 16MB
-; board_build.arduino.partitions = default_16MB.csv
-; board_build.psram_size = 8MB
 monitor_speed = 115200
-; board_build.filesystem = spiffs
-;board_build.partitions = partitions_16mb.csv
-; upload_protocol = espota
-; upload_port = ESP32-Thermostat.local  # или IP-адрес устройства
-; upload_flags =
-;     --port=3232
-;     --auth=admin123  ; должен совпадать с OTA_PASSWORD в коде
-build_flags = 
-	; -DBOARD_HAS_PSRAM
-	-mfix-esp32-psram-cache-issue
-	-DCORE_DEBUG_LEVEL=5  
+;build_flags = 
+	;-mfix-esp32-psram-cache-issue
+	; -DCONFIG_FREERTOS_SUPPORT_STATIC_ALLOCATION=1
+    ; -DCONFIG_SPIRAM_ALLOW_STACK_EXTERNAL_MEMORY=1
+    ; -DCONFIG_SPIRAM_USE=1
+    ; -DCONFIG_SPIRAM_SPEED_80M=1
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	bblanchon/ArduinoJson@^7.3.1
 	knolleary/PubSubClient@^2.8
 	fmalpartida/LiquidCrystal@^1.5.0
+	adafruit/Adafruit NeoPixel@^1.12.5
