--- a/serverCody/platformio.ini
+++ b/serverCody/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
 monitor_speed = 115200
+;upload_flags = --erase-all
 ;build_flags = 
 	;-mfix-esp32-psram-cache-issue
 	; -DCONFIG_FREERTOS_SUPPORT_STATIC_ALLOCATION=1
