--- a/platformio.ini
+++ b/platformio.ini
@@ -26,3 +26,11 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	fmalpartida/LiquidCrystal@^1.5.0
 	adafruit/Adafruit NeoPixel@^1.12.5
+; Добавляем настройки OTA
+[env:ota]
+extends = env:esp32-s3-devkitc-1-n16r8v
+upload_protocol = espota
+upload_port = 192.168.100.82  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес
+upload_flags = 
+	--port=3232  ; Порт, который вы установили в ArduinoOTA.setPort()
+	--auth=admin123  ; Пароль, который вы установили в ArduinoOTA.setPassword()
