--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,6 @@ platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
 monitor_speed = 115200
-;upload_flags = --erase-all
-;build_flags = 
-	;-mfix-esp32-psram-cache-issue
-	; -DCONFIG_FREERTOS_SUPPORT_STATIC_ALLOCATION=1
-    ; -DCONFIG_SPIRAM_ALLOW_STACK_EXTERNAL_MEMORY=1
-    ; -DCONFIG_SPIRAM_USE=1
-    ; -DCONFIG_SPIRAM_SPEED_80M=1
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.3.0
 	bblanchon/ArduinoJson@^7.3.1
@@ -30,7 +23,7 @@ lib_deps =
 [env:ota]
 extends = env:esp32-s3-devkitc-1-n16r8v
 upload_protocol = espota
-upload_port = 192.168.100.82  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес
+upload_port = server-esp32-s3-uno.local  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес
 upload_flags = 
-	--port=3232  ; Порт, который вы установили в ArduinoOTA.setPort()
+	--port=8266  ; Порт, который вы установили в ArduinoOTA.setPort()
 	--auth=admin123  ; Пароль, который вы установили в ArduinoOTA.setPassword()
