--- a/platformio.ini
+++ b/platformio.ini
@@ -20,10 +20,10 @@ lib_deps =
 	fmalpartida/LiquidCrystal@^1.5.0
 	adafruit/Adafruit NeoPixel@^1.12.5
 ; Добавляем настройки OTA
-[env:ota]
-extends = env:esp32-s3-devkitc-1-n16r8v
+; [env:ota]
+; extends = env:esp32-s3-devkitc-1-n16r8v
 upload_protocol = espota
-upload_port = server-esp32-s3-uno.local  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес
+upload_port = server-esp32-s3-uno.local  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес (изменен на "ota-home-server")
 upload_flags = 
 	--port=8266  ; Порт, который вы установили в ArduinoOTA.setPort()
 	--auth=admin123  ; Пароль, который вы установили в ArduinoOTA.setPassword()
