доработки установки пароля

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,8 +22,8 @@ lib_deps =
 ; Добавляем настройки OTA
 ; [env:ota]
 ; extends = env:esp32-s3-devkitc-1-n16r8v
-; upload_protocol = espota
-; upload_port = home-server.local  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес
-; upload_flags = 
-; 	--port=8266  ; Порт, который вы установили в ArduinoOTA.setPort()
-; 	--auth=admin123  ; Пароль, который вы установили в ArduinoOTA.setPassword()
+upload_protocol = espota
+upload_port = home-server.local  ; Используйте имя хоста из OTA_HOSTNAME или IP-адрес
+upload_flags = 
+	--port=8266  ; Порт, который вы установили в ArduinoOTA.setPort()
+	--auth=admin123  ; Пароль, который вы установили в ArduinoOTA.setPassword()
